<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66FF00"
    tools:context="com.example.otimizadorprocessador.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/voltar_explica"
                android:src="@drawable/voltar" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/guide_me"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/passo_um"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/passo_dois"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/passo_tres"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/passo_quatro"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:typeface="serif" />

    </LinearLayout>

</FrameLayout>

